app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --foreground-rgb: 0, 0, 0;
  --background-start-rgb: 185, 185, 185;
  --background-end-rgb: 255, 255, 255;
}

@media (prefers-color-scheme: dark) {
  :root {
    --foreground-rgb: 255, 255, 255;
    --background-start-rgb: 2, 6, 23;
    --background-end-rgb: 24, 24, 27;
  }
}

body {
  color: rgb(var(--foreground-rgb));
  background: linear-gradient(
      to top,
      transparent,
      rgb(var(--background-end-rgb))
    )
    rgb(var(--background-start-rgb));
  background-repeat: no-repeat;
  background-size: auto;
}

@layer utilities {
  .text-balance {
    text-wrap: balance;
  }
}

